.antlr/PlotScriptParser.java
// Generated from d:/AGH/SEM4/KOMPILATORY/project/PlotScript/PlotScriptParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PlotScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PLOT_LBRACKET=1, PLOT_RBRACKET=2, LIST_LBRACKET=3, LIST_RBRACKET=4, FUNC_CALL_LBRACKET=5, 
		FUNC_CALL_RBRACKET=6, BLOCK_DELIMITER=7, VALUE_DELIMITER=8, ASSIGN=9, 
		AXIS1=10, AXIS2=11, COLOR=12, OUTPUT=13, ARRANGE=14, INPUT=15, AXIS1_SCALE=16, 
		AXIS2_SCALE=17, FUNC=18, FIRST=19, LAST=20, STEP=21, EXPORT=22, CPP_FUNC_START=23, 
		PY_FUNC_START=24, STRING=25, NUMBER=26, ID=27, WS=28, CPP_FUNC_END=29, 
		CPP_TYPE_INT=30, CPP_TYPE_DOUBLE=31, CPP_TYPE_BOOL=32, CPP_TYPE_VOID=33, 
		CPP_PLUS=34, CPP_MINUS=35, CPP_STAR=36, CPP_DIV=37, CPP_ASSIGN=38, CPP_COMMA=39, 
		CPP_SEMI=40, CPP_LPAREN=41, CPP_RPAREN=42, CPP_LBRACE=43, CPP_RBRACE=44, 
		CPP_IF=45, CPP_ELSE=46, CPP_FOR=47, CPP_RETURN=48, CPP_AND=49, CPP_OR=50, 
		CPP_NOT=51, CPP_NUMBER=52, CPP_ID=53, CPP_TRUE_KW=54, CPP_FALSE_KW=55, 
		CPP_WS=56, CPP_LINE_COMMENT=57, CPP_BLOCK_COMMENT=58, PY_DEF=59, PY_IMPORT=60, 
		PY_AS=61, PY_PASS=62, PY_TRUE_KW=63, PY_FALSE_KW=64, PY_NONE_KW=65, PY_COLON=66, 
		PY_PLUS=67, PY_MINUS=68, PY_STAR=69, PY_DIV=70, PY_ASSIGN=71, PY_LPAREN=72, 
		PY_RPAREN=73, PY_COMMA=74, PY_NUMBER=75, PY_ID=76, PY_WS=77, PY_LINE_COMMENT=78;
	public static final int
		RULE_program = 0, RULE_plotDefinition = 1, RULE_plotName = 2, RULE_plotBlock = 3, 
		RULE_plotStatement = 4, RULE_plotFunctionIdentifier = 5, RULE_expression = 6, 
		RULE_value = 7, RULE_list = 8, RULE_functionCall = 9, RULE_stringLikeFunction = 10, 
		RULE_stringLikeFunctionParam = 11, RULE_rangeArgs = 12, RULE_embeddedFunctionBlock = 13, 
		RULE_cpp_funcDeclaration = 14, RULE_cpp_funcReturnType = 15, RULE_cpp_typeSpecifier = 16, 
		RULE_cpp_paramList = 17, RULE_cpp_parameter = 18, RULE_cpp_funcBody = 19, 
		RULE_cpp_funcStatement = 20, RULE_cpp_assignment = 21, RULE_cpp_varDeclaration = 22, 
		RULE_cpp_return = 23, RULE_cpp_controlStructure = 24, RULE_cpp_expr = 25, 
		RULE_exportStatement = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "plotDefinition", "plotName", "plotBlock", "plotStatement", 
			"plotFunctionIdentifier", "expression", "value", "list", "functionCall", 
			"stringLikeFunction", "stringLikeFunctionParam", "rangeArgs", "embeddedFunctionBlock", 
			"cpp_funcDeclaration", "cpp_funcReturnType", "cpp_typeSpecifier", "cpp_paramList", 
			"cpp_parameter", "cpp_funcBody", "cpp_funcStatement", "cpp_assignment", 
			"cpp_varDeclaration", "cpp_return", "cpp_controlStructure", "cpp_expr", 
			"exportStatement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'['", "']'", null, null, null, null, null, null, null, 
			"'color'", "'output'", "'arrange'", "'input'", null, null, "'func'", 
			"'first'", "'last'", "'step'", "'export'", "'$CPP$'", "'$PY$'", null, 
			null, null, null, "'$$'", "'int'", null, "'bool'", "'void'", null, null, 
			null, null, null, null, null, null, null, null, null, "'if'", "'else'", 
			"'for'", "'return'", "'&&'", "'||'", "'!'", null, null, "'true'", "'false'", 
			null, null, null, "'def'", "'import'", "'as'", "'pass'", "'True'", "'False'", 
			"'None'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PLOT_LBRACKET", "PLOT_RBRACKET", "LIST_LBRACKET", "LIST_RBRACKET", 
			"FUNC_CALL_LBRACKET", "FUNC_CALL_RBRACKET", "BLOCK_DELIMITER", "VALUE_DELIMITER", 
			"ASSIGN", "AXIS1", "AXIS2", "COLOR", "OUTPUT", "ARRANGE", "INPUT", "AXIS1_SCALE", 
			"AXIS2_SCALE", "FUNC", "FIRST", "LAST", "STEP", "EXPORT", "CPP_FUNC_START", 
			"PY_FUNC_START", "STRING", "NUMBER", "ID", "WS", "CPP_FUNC_END", "CPP_TYPE_INT", 
			"CPP_TYPE_DOUBLE", "CPP_TYPE_BOOL", "CPP_TYPE_VOID", "CPP_PLUS", "CPP_MINUS", 
			"CPP_STAR", "CPP_DIV", "CPP_ASSIGN", "CPP_COMMA", "CPP_SEMI", "CPP_LPAREN", 
			"CPP_RPAREN", "CPP_LBRACE", "CPP_RBRACE", "CPP_IF", "CPP_ELSE", "CPP_FOR", 
			"CPP_RETURN", "CPP_AND", "CPP_OR", "CPP_NOT", "CPP_NUMBER", "CPP_ID", 
			"CPP_TRUE_KW", "CPP_FALSE_KW", "CPP_WS", "CPP_LINE_COMMENT", "CPP_BLOCK_COMMENT", 
			"PY_DEF", "PY_IMPORT", "PY_AS", "PY_PASS", "PY_TRUE_KW", "PY_FALSE_KW", 
			"PY_NONE_KW", "PY_COLON", "PY_PLUS", "PY_MINUS", "PY_STAR", "PY_DIV", 
			"PY_ASSIGN", "PY_LPAREN", "PY_RPAREN", "PY_COMMA", "PY_NUMBER", "PY_ID", 
			"PY_WS", "PY_LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PlotScriptParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PlotScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PlotScriptParser.EOF, 0); }
		public List<PlotDefinitionContext> plotDefinition() {
			return getRuleContexts(PlotDefinitionContext.class);
		}
		public PlotDefinitionContext plotDefinition(int i) {
			return getRuleContext(PlotDefinitionContext.class,i);
		}
		public ExportStatementContext exportStatement() {
			return getRuleContext(ExportStatementContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(54);
				plotDefinition();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXPORT) {
				{
				setState(60);
				exportStatement();
				}
			}

			setState(63);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlotDefinitionContext extends ParserRuleContext {
		public PlotNameContext plotName() {
			return getRuleContext(PlotNameContext.class,0);
		}
		public PlotBlockContext plotBlock() {
			return getRuleContext(PlotBlockContext.class,0);
		}
		public PlotDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plotDefinition; }
	}

	public final PlotDefinitionContext plotDefinition() throws RecognitionException {
		PlotDefinitionContext _localctx = new PlotDefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_plotDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			plotName();
			setState(66);
			plotBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlotNameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PlotScriptParser.ID, 0); }
		public PlotNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plotName; }
	}

	public final PlotNameContext plotName() throws RecognitionException {
		PlotNameContext _localctx = new PlotNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_plotName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlotBlockContext extends ParserRuleContext {
		public TerminalNode PLOT_LBRACKET() { return getToken(PlotScriptParser.PLOT_LBRACKET, 0); }
		public TerminalNode PLOT_RBRACKET() { return getToken(PlotScriptParser.PLOT_RBRACKET, 0); }
		public List<PlotStatementContext> plotStatement() {
			return getRuleContexts(PlotStatementContext.class);
		}
		public PlotStatementContext plotStatement(int i) {
			return getRuleContext(PlotStatementContext.class,i);
		}
		public PlotBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plotBlock; }
	}

	public final PlotBlockContext plotBlock() throws RecognitionException {
		PlotBlockContext _localctx = new PlotBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_plotBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(PLOT_LBRACKET);
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 211968L) != 0)) {
				{
				{
				setState(71);
				plotStatement();
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77);
			match(PLOT_RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlotStatementContext extends ParserRuleContext {
		public PlotFunctionIdentifierContext plotFunctionIdentifier() {
			return getRuleContext(PlotFunctionIdentifierContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(PlotScriptParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode BLOCK_DELIMITER() { return getToken(PlotScriptParser.BLOCK_DELIMITER, 0); }
		public PlotStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plotStatement; }
	}

	public final PlotStatementContext plotStatement() throws RecognitionException {
		PlotStatementContext _localctx = new PlotStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_plotStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			plotFunctionIdentifier();
			setState(80);
			match(ASSIGN);
			setState(81);
			expression();
			setState(82);
			match(BLOCK_DELIMITER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlotFunctionIdentifierContext extends ParserRuleContext {
		public TerminalNode AXIS1() { return getToken(PlotScriptParser.AXIS1, 0); }
		public TerminalNode AXIS2() { return getToken(PlotScriptParser.AXIS2, 0); }
		public TerminalNode COLOR() { return getToken(PlotScriptParser.COLOR, 0); }
		public TerminalNode OUTPUT() { return getToken(PlotScriptParser.OUTPUT, 0); }
		public TerminalNode AXIS1_SCALE() { return getToken(PlotScriptParser.AXIS1_SCALE, 0); }
		public TerminalNode AXIS2_SCALE() { return getToken(PlotScriptParser.AXIS2_SCALE, 0); }
		public PlotFunctionIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plotFunctionIdentifier; }
	}

	public final PlotFunctionIdentifierContext plotFunctionIdentifier() throws RecognitionException {
		PlotFunctionIdentifierContext _localctx = new PlotFunctionIdentifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_plotFunctionIdentifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 211968L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expression);
		try {
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
			case NUMBER:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				value();
				}
				break;
			case LIST_LBRACKET:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				list();
				}
				break;
			case ARRANGE:
			case INPUT:
			case FUNC:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				functionCall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValueContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(PlotScriptParser.STRING, 0); }
		public TerminalNode NUMBER() { return getToken(PlotScriptParser.NUMBER, 0); }
		public TerminalNode ID() { return getToken(PlotScriptParser.ID, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 234881024L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListContext extends ParserRuleContext {
		public TerminalNode LIST_LBRACKET() { return getToken(PlotScriptParser.LIST_LBRACKET, 0); }
		public TerminalNode LIST_RBRACKET() { return getToken(PlotScriptParser.LIST_RBRACKET, 0); }
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public List<TerminalNode> VALUE_DELIMITER() { return getTokens(PlotScriptParser.VALUE_DELIMITER); }
		public TerminalNode VALUE_DELIMITER(int i) {
			return getToken(PlotScriptParser.VALUE_DELIMITER, i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(LIST_LBRACKET);
			{
			setState(94);
			value();
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VALUE_DELIMITER) {
				{
				{
				setState(95);
				match(VALUE_DELIMITER);
				setState(96);
				value();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(102);
			match(LIST_RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionCallContext extends ParserRuleContext {
		public TerminalNode ARRANGE() { return getToken(PlotScriptParser.ARRANGE, 0); }
		public TerminalNode FUNC_CALL_LBRACKET() { return getToken(PlotScriptParser.FUNC_CALL_LBRACKET, 0); }
		public RangeArgsContext rangeArgs() {
			return getRuleContext(RangeArgsContext.class,0);
		}
		public TerminalNode FUNC_CALL_RBRACKET() { return getToken(PlotScriptParser.FUNC_CALL_RBRACKET, 0); }
		public StringLikeFunctionContext stringLikeFunction() {
			return getRuleContext(StringLikeFunctionContext.class,0);
		}
		public StringLikeFunctionParamContext stringLikeFunctionParam() {
			return getRuleContext(StringLikeFunctionParamContext.class,0);
		}
		public TerminalNode FUNC() { return getToken(PlotScriptParser.FUNC, 0); }
		public EmbeddedFunctionBlockContext embeddedFunctionBlock() {
			return getRuleContext(EmbeddedFunctionBlockContext.class,0);
		}
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
	}

	public final FunctionCallContext functionCall() throws RecognitionException {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_functionCall);
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ARRANGE:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				match(ARRANGE);
				setState(105);
				match(FUNC_CALL_LBRACKET);
				setState(106);
				rangeArgs();
				setState(107);
				match(FUNC_CALL_RBRACKET);
				}
				break;
			case INPUT:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				stringLikeFunction();
				setState(110);
				match(FUNC_CALL_LBRACKET);
				setState(111);
				stringLikeFunctionParam();
				setState(112);
				match(FUNC_CALL_RBRACKET);
				}
				break;
			case FUNC:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				match(FUNC);
				setState(115);
				match(FUNC_CALL_LBRACKET);
				setState(116);
				embeddedFunctionBlock();
				setState(117);
				match(FUNC_CALL_RBRACKET);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StringLikeFunctionContext extends ParserRuleContext {
		public TerminalNode INPUT() { return getToken(PlotScriptParser.INPUT, 0); }
		public StringLikeFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringLikeFunction; }
	}

	public final StringLikeFunctionContext stringLikeFunction() throws RecognitionException {
		StringLikeFunctionContext _localctx = new StringLikeFunctionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_stringLikeFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(INPUT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StringLikeFunctionParamContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(PlotScriptParser.STRING, 0); }
		public StringLikeFunctionParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringLikeFunctionParam; }
	}

	public final StringLikeFunctionParamContext stringLikeFunctionParam() throws RecognitionException {
		StringLikeFunctionParamContext _localctx = new StringLikeFunctionParamContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_stringLikeFunctionParam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RangeArgsContext extends ParserRuleContext {
		public TerminalNode FIRST() { return getToken(PlotScriptParser.FIRST, 0); }
		public List<TerminalNode> FUNC_CALL_LBRACKET() { return getTokens(PlotScriptParser.FUNC_CALL_LBRACKET); }
		public TerminalNode FUNC_CALL_LBRACKET(int i) {
			return getToken(PlotScriptParser.FUNC_CALL_LBRACKET, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(PlotScriptParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(PlotScriptParser.NUMBER, i);
		}
		public List<TerminalNode> FUNC_CALL_RBRACKET() { return getTokens(PlotScriptParser.FUNC_CALL_RBRACKET); }
		public TerminalNode FUNC_CALL_RBRACKET(int i) {
			return getToken(PlotScriptParser.FUNC_CALL_RBRACKET, i);
		}
		public List<TerminalNode> VALUE_DELIMITER() { return getTokens(PlotScriptParser.VALUE_DELIMITER); }
		public TerminalNode VALUE_DELIMITER(int i) {
			return getToken(PlotScriptParser.VALUE_DELIMITER, i);
		}
		public TerminalNode LAST() { return getToken(PlotScriptParser.LAST, 0); }
		public TerminalNode STEP() { return getToken(PlotScriptParser.STEP, 0); }
		public RangeArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rangeArgs; }
	}

	public final RangeArgsContext rangeArgs() throws RecognitionException {
		RangeArgsContext _localctx = new RangeArgsContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_rangeArgs);
		try {
			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				match(FIRST);
				setState(126);
				match(FUNC_CALL_LBRACKET);
				setState(127);
				match(NUMBER);
				setState(128);
				match(FUNC_CALL_RBRACKET);
				setState(129);
				match(VALUE_DELIMITER);
				setState(130);
				match(LAST);
				setState(131);
				match(FUNC_CALL_LBRACKET);
				setState(132);
				match(NUMBER);
				setState(133);
				match(FUNC_CALL_RBRACKET);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				match(FIRST);
				setState(135);
				match(FUNC_CALL_LBRACKET);
				setState(136);
				match(NUMBER);
				setState(137);
				match(FUNC_CALL_RBRACKET);
				setState(138);
				match(VALUE_DELIMITER);
				setState(139);
				match(LAST);
				setState(140);
				match(FUNC_CALL_LBRACKET);
				setState(141);
				match(NUMBER);
				setState(142);
				match(FUNC_CALL_RBRACKET);
				setState(143);
				match(VALUE_DELIMITER);
				setState(144);
				match(STEP);
				setState(145);
				match(FUNC_CALL_LBRACKET);
				setState(146);
				match(NUMBER);
				setState(147);
				match(FUNC_CALL_RBRACKET);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
